Fixing roster impoorts
